# spida

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.rst  build.sh  codecov.yml  configure.bat
.github/workflows/: cmake.yml  coverage.yml
cmake/: SPIDAconfig.cmake.in  SpidaConfig.cmake  SpidaConfig.cmake.in
demos/: CMakeLists.txt  NLSR.cpp  NLSRT.cpp  burgers.cpp  grid_demo.cpp  hankel.cpp  interp_demo.cpp  kdvCV.cpp  kdvRV.cpp  kdv_propagator.cpp  ks.cpp  ks_if34.cpp  ks_if45dp.cpp  transformR.cpp  transformRT.cpp  transformRT_example.cpp  transformT.cpp  transform_p_RT.cpp
examples/: CMakeLists.txt  grid_example.cpp  hankel_example.cpp  interp_example.cpp  kdv_example.cpp  kdv_exampleRV.cpp  kdv_example_propagator.cpp  transformRT_example.cpp  transformR_example.cpp  transformT_example.cpp
include/spida/: CVT.h  CVX.h  ChebInterpX.h  ChebX.h  PeriodicBLT.h  R.h  RCVT.h  RRVT.h  RVT.h  RVX.h  SpidaBLT.h  SpidaCHEBX.h  SpidaCVT.h  SpidaCVX.h  SpidaR.h  SpidaRBLT.h  SpidaRCVT.h  SpidaRRVT.h  SpidaRVT.h  SpidaRVX.h  SpidaX.h  chebInterpFFTWX.h  chebInterpX.h  chebX.h  interp.h  spidaChebX.h  spidaFFTWX.h  spidaInterpFFTWX.h  spidaT.h  spidaX.h
include/spida/grid/: besselR.h  chebX.h  grid.h  gridR.h  gridT.h  gridX.h  uniformCVT.h  uniformCVX.h  uniformRVT.h  uniformRVX.h  uniformT.h  uniformX.h
include/spida/helper/: constants.h  funcs.hpp  interp.h
include/spida/model/: model.h  modelRT.h  modelT.h
include/spida/propagator/: propagator.h  propagatorT.h  reporthandler.h
include/spida/report/: reportcenter.h  reporthandler.h
include/spida/rkstiff/: ETDAS.h  ETDCS.h  IFAS.h  solver.h
include/spida/shape/: shape.h  shape.hpp  shapeR.h  shapeT.h  shapeX.h
include/spida/solver/: solver.h  solverETDAS.h  solverETDCS.h
include/spida/transform/: chebFFTWX.h  chebX.h  fftBLT.h  fftCVT.h  fftCVX.h  fftRVT.h  fftRVX.h  fftX.h  fftwT.h  hankelR.h  hankelfftRBLT.h  hankelfftRCVT.h  hankelfftRRVT.h  hankelperiodicRT.h  kissX.h  periodicT.h  transformR.h  transformRT.h  transformT.h  transformX.h
scripts/: build.bat  build.sh  configure.bat  configure.sh
src/: CMakeLists.txt  ChebInterpX.cpp  ChebX.cpp  PeriodicBLT.cpp  SpidaBLT.cpp  SpidaCHEBX.cpp  SpidaCVT.cpp  SpidaCVX.cpp  SpidaR.cpp  SpidaRBLT.cpp  SpidaRCVT.cpp  SpidaRRVT.cpp  SpidaRVT.cpp  SpidaRVX.cpp  SpidaX.cpp  chebInterpFFTWX.cpp  chebInterpX.cpp  interp.cpp  spidaChebX.cpp  spidaFFTWX.cpp  spidaPeriodicT.cpp
src/grid/: besselR.cpp  chebX.cpp  grid.cpp  gridR.cpp  gridX.cpp  uniformCVT.cpp  uniformCVX.cpp  uniformRVT.cpp  uniformRVX.cpp  uniformT.cpp  uniformX.cpp
src/helper/: interp.cpp
src/model/: modelT.cpp
src/propagator/: propagator.cpp  propagatorBLT.cpp  propagatorRT_RC.cpp  propagatorRTp_RC.cpp  propagatorT.cpp  reporthandler.cpp
src/report/: reportcenter.cpp  reporthandler.cpp
src/rkstiff/: ETDAS.cpp  ETDCS.cpp  IFAS.cpp  solver.cpp
src/shape/: shapeR.cpp  shapeT.cpp  shapeX.cpp
src/solver/: solver.cpp  solverETDAS.cpp  solverETDCS.cpp
src/transform/: chebFFTWX.cpp  chebX.cpp  fftBLT.cpp  fftCVT.cpp  fftCVX.cpp  fftRVT.cpp  fftRVX.cpp  fftX.cpp  fftwT.cpp  hankelR.cpp  hankelfftRBLT.cpp  hankelfftRCVT.cpp  hankelfftRRVT.cpp  hankelperiodicRT.cpp  kissX.cpp  periodicT.cpp
test/: CMakeLists.txt  chebInterp_tests.cpp  dct_tests.cpp  fdct_tests.cpp  fftT_tests.cpp  fftX_tests.cpp  fft_tests.cpp  fftw_tests.cpp  grid_tests.cpp  hankel_tests.cpp  hankelfftRCVT_tests.cpp  hankelfftRRVT_tests.cpp  hankelfft_tests.cpp  kiss_tests.cpp  nayuki_tests.cpp  nayukidct_tests.cpp  shape_tests.cpp  spidaR_tests.cpp  transform_tests.cpp
usage/: CMakeLists.txt  README.md  main.cpp
